# xmipp3-installer

./: .gitignore  .sonarcloud.properties  README.md  pyproject.toml  renovate.json  setup.cfg  sonar-project.properties
.github/workflows/: build-and-test-standalone.yml  build-and-test.yml  build-standalone.yml  release.yml  sonar.yml  test-e2e.yml
conf/: .coveragerc  ruff-tests.toml
conf/coverage/: .e2e-coverage  .e2e-coveragerc  .integration-coverage  .integration-coveragerc  .unitary-coverage  .unitary-coveragerc
conf/pytest/: e2e.ini  integration.ini  unitary.ini
original/: xmipp.py
original/installer/: api.py  cmake.py  config.py  main.py  utils.py
original/installer/constants/: main.py  versions.py
scripts/: clean.sh  run-tests.ps1  run-tests.sh
src/xmipp3_installer/: __main__.py
src/xmipp3_installer/api_client/: __init__.py  api_client.py
src/xmipp3_installer/api_client/assembler/: installation_info_assembler.py
src/xmipp3_installer/application/: cli.py
src/xmipp3_installer/application/cli/: arguments.py  cli.py  parser.py
src/xmipp3_installer/application/logger/: errors.py  logger.py  predefined_messages.py  urls.py
src/xmipp3_installer/domain/handlers/: git_handler.py  shell_handler.py
src/xmipp3_installer/installer/: constants.py  disaster_drawer.py  installer_service.py  installer_service_two.py  orquestrator.py  urls.py
src/xmipp3_installer/installer/constants/: __init__.py  paths.py
src/xmipp3_installer/installer/handlers/: conda_handler.py  generic_package_handler.py  git_handler.py  shell_handler.py  versions_manager.py
src/xmipp3_installer/installer/modes/: mode_add_model_executor.py  mode_all_executor.py  mode_clean_bin_executor.py  mode_config.py  mode_config_executor.py  mode_executor.py  mode_get_sources_executor.py  mode_git_executor.py  mode_selector.py  mode_version_executor.py
src/xmipp3_installer/installer/tmp/: disaster_drawer.py  versions.py
src/xmipp3_installer/repository/: config.py  invalid_config_line.py  versions.py
src/xmipp3_installer/repository/config_vars/: config_values_adapter.py  default_values.py  variables.py  vars.py
src/xmipp3_installer/shared/: file_operations.py  singleton.py
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  mode_add_model_test.py  mode_all_test.py  mode_clean_all_test.py  mode_clean_bin_test.py  mode_compile_and_install_test.py  mode_config_build_test.py  mode_config_test.py  mode_get_models_test.py  mode_get_sources_test.py  mode_git_test.py  mode_test_test.py  mode_version_test.py
tests/e2e/conf_files/: modified.conf
tests/e2e/shell_command_outputs/: __init__.py  mode_add_model.py  mode_all.py  mode_config_build.py  mode_get_models.py  mode_get_sources.py  mode_git.py  mode_test.py  mode_version.py
tests/e2e/test_files/: libraries-with-versions.txt  xmipp_sync_data.py  xmipp_sync_data.sh
tests/integration/api_client/: api_client_test.py  file_contents.py  shell_command_outputs.py
tests/integration/repository/: versions_test.py
tests/test_files/: fake.bashrc  test.py  version-info.json  xmipp_sync_data.py
tests/test_files/cmake-cases/valid/: CMakeLists.txt
tests/test_files/version-info-files/: invalid-date.json  invalid-version.json  syntax-error.json  valid.json
tests/test_files/version_info_files/: syntax-error.json  valid.json
tests/unitary/: __init__.py
tests/unitary/api_client/: api_client_test.py
tests/unitary/application/: user_interactions_test.py
tests/unitary/domain/: disaster_drawer.py
tests/unitary/installer/: installer_service_test.py  orquestrator_test.py
tests/unitary/repository/: config_test.py  config_values_adapter_test.py  file_operations_test.py  invalid_config_line_test.py  versions_test.py
tests/unitary/shared/: file_operations_test.py  singleton_test.py
(+107 files in other folders)
