[tool.poetry]
name = "xmipp3-installer"
version = "1.0.0"
description = "Package to handle the installation of Xmipp3"
authors = ["Martín Salinas <ssalinasmartin@gmail.com>"]
readme = "README.md"
license = "LICENSE"
keywords = ["xmipp3", "installer"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.12"
distro = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-cov = "^5"
pytest-subprocess = "^1.5.2"
pytest-localserver = "^0.9.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xmipp3_installer = "xmipp3_installer.__main__:main"
