[project]
name = "xmipp3_installer"
version = "1.1.0"
authors = [
  { name = "Martín Salinas", email = "ssalinasmartin@gmail.com" },
]
description = "Package to handle the installation of Xmipp3"
keywords = ["xmipp3", "installer"]
classifiers = ["Programming Language :: Python"]
readme = "README.md"
license = { "file" = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
  "typing-extensions>=4.12",
  "distro>=1.9.0"
]

[project.optional-dependencies]
test = [
  "pytest==8.*",
  "pygments", # Needed by pytest-cov but not listed in its dependencies
  "pytest-cov==5.*; python_version < '3.9'",
  "pytest-cov==6.*; python_version > '3.8'",
  "pytest-subprocess==1.*",
  "pytest-localserver==0.*",
  "ruff==0.*",
  "cmake==4.*",
  "ninja==1.*"
]

[project.urls]
Homepage = "https://github.com/I2PC/xmipp3-installer"
Issues = "https://github.com/I2PC/xmipp3-installer/issues"

[project.scripts]
xmipp3_installer = "xmipp3_installer.__main__:main"

