[project]
name = "xmipp3-installer"
version = "2.1.0"
authors = [
  { name = "Martín Salinas", email = "ssalinasmartin@gmail.com" },
]
description = "Package to handle the installation of Xmipp3"
keywords = ["xmipp3", "installer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux"
]
readme = "README.md"
license = { text = "GPL-3.0-only" }

requires-python = ">=3.8"
dependencies = [
  "typing-extensions==4.13.2; python_version < '3.9'",
  "typing-extensions==4.15.0; python_version >= '3.9'",
  "distro==1.9.0"
]

[build-system]
requires = ["setuptools>=75.1", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
  "pytest==8.3.5; python_version < '3.10'",
  "pytest==9.0.2; python_version >= '3.10'",
  "pytest-cov==5.0.0; python_version < '3.9'",
  "pytest-cov==7.1.0; python_version >= '3.9'",
  "pytest-subprocess==1.5.4",
  "pytest-localserver==0.10.0",
  "ruff==0.15.7",
  "cmake==4.3.0",
  "ninja==1.13.0"
]

[project.urls]
Homepage = "https://github.com/I2PC/xmipp3-installer"
Issues = "https://github.com/I2PC/xmipp3-installer/issues"

[project.scripts]
xmipp3_installer = "xmipp3_installer.__main__:main"
